--- a/ComplexNetwork_HW1_Q4_Q5.ipynb
+++ b/ComplexNetwork_HW1_Q4_Q5.ipynb
@@ -4,9 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOw4Wc1hCRz8ePeP4cKInM8",
+      "authorship_tag": "ABX9TyO+1Tb3dFMXfh+v7YonfGuG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,6 +26,21 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/AUT-Student/CN-HW1/blob/main/ComplexNetwork_HW1_Q4_Q5.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "<center><b>In the name of God</b></center>\n",
+        "\n",
+        "<b>Course</b>: ‌Complex Network\n",
+        "<br>\n",
+        "<b>Description:</b> HomeWork 1 | Question 4 & Question 5\n",
+        "<br>\n",
+        "<b>Developer</b>: Alireza Mazochi (400131075)"
+      ],
+      "metadata": {
+        "id": "CnAHnR8yj_Jc"
+      }
     },
     {
       "cell_type": "markdown",
@@ -134,7 +148,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "1adac48b-0cad-42de-feec-332e234676d8"
+        "outputId": "f9ccaf64-fc79-4876-b81a-f4bba3d5f2b2"
       },
       "execution_count": 3,
       "outputs": [
@@ -145,7 +159,7 @@
             "Downloading...\n",
             "From: https://snap.stanford.edu/data/ca-AstroPh.txt.gz\n",
             "To: /content/ca-AstroPh.txt.gz\n",
-            "100% 1.45M/1.45M [00:00<00:00, 1.70MB/s]\n"
+            "100% 1.45M/1.45M [00:01<00:00, 1.18MB/s]\n"
           ]
         }
       ]
@@ -160,7 +174,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "O4LQOW1yD5aU",
-        "outputId": "aa8d4860-3e73-423e-fa74-67bbdb11f25a"
+        "outputId": "2a8e0c83-ae82-44d9-e412-0223c22b122c"
       },
       "execution_count": 4,
       "outputs": [
@@ -186,7 +200,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ztL2tLAVD8y0",
-        "outputId": "9a24aad7-9db4-43b6-f6a0-944342bf09ee"
+        "outputId": "0d085d89-8ee1-43f8-93b9-47556cb8ec6a"
       },
       "execution_count": 5,
       "outputs": [
@@ -218,6 +232,17 @@
         "import numpy as np\n",
         "def influence(graph:Graph, initial_nodes,\n",
         "              probability=0.001, number_realization=1):\n",
+        "  \"\"\" Calculate influence of a set of nodes (Question 4) \n",
+        "  \n",
+        "  Args:\n",
+        "    graph(Graph): The graph\n",
+        "    initial_nodes(list of int): The list of selected nodes.\n",
+        "    probability(float): The probability of edge activation\n",
+        "    number_realization(int): The number of realization.\n",
+        "\n",
+        "  Returns:\n",
+        "    float: The average influenced node number. \n",
+        "  \"\"\"\n",
         "\n",
         "  effected_node_numbers = []\n",
         "  for _ in range(number_realization):\n",
@@ -254,7 +279,17 @@
       "source": [
         "def outbreak(graph:Graph, initial_nodes,\n",
         "             probability=0.001, number_realization=1):\n",
-        " \n",
+        "  \"\"\" Calculate outbreak detection of a set of nodes (Question 5) \n",
+        "  \n",
+        "  Args:\n",
+        "    graph(Graph): The graph\n",
+        "    initial_nodes(list of int): The list of selected nodes as sensors.\n",
+        "    probability(float): The probability of edge activation\n",
+        "    number_realization(int): The number of realization.\n",
+        "\n",
+        "  Returns:\n",
+        "    float: The revard (The average of clean nodes * 0.25).\n",
+        "  \"\"\"\n",
         "  sensor_nodes = initial_nodes\n",
         "  \n",
         "  for _ in range(number_realization):\n",
@@ -299,6 +334,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# Cost 1 for each node in question 4\n",
         "node_costs_q4 = dict()\n",
         "for node in graph.nodes:\n",
         "  node_costs_q4[node] = 1"
@@ -312,6 +348,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# Cost degree for each node in question 5\n",
         "node_costs_q5 = dict()\n",
         "for node in graph.nodes:\n",
         "  node_costs_q5[node] = graph.get_total_degree(node) * 0.8"
@@ -344,6 +381,8 @@
         "                  probability=0.001,\n",
         "                  number_realization=1):\n",
         "  \"\"\"\n",
+        "  The classis Hill Climbing without lazy evaluation.\n",
+        "\n",
         "  Args:\n",
         "    graph(Graph): The graph\n",
         "    budget(float): The maximum treshold for costs of selected nodes.\n",
@@ -354,7 +393,8 @@
         "    node_costs(dict): The dictionary that specify the selection cost for each node.\n",
         "\n",
         "  Returns:\n",
-        "    list: The top nodes with maximum influence\n",
+        "    list: The top nodes with maximum influence.\n",
+        "    int: The benefit of the top nodes.\n",
         "  \"\"\"\n",
         "  \n",
         "  top_nodes = list()\n",
@@ -419,6 +459,8 @@
         "                       probability=0.001,\n",
         "                       number_realization=1):\n",
         "  \"\"\"\n",
+        "  The Hill Climbing with lazy evaluation speed up.\n",
+        "\n",
         "  Args:\n",
         "    graph(Graph): The graph\n",
         "    budget(float): The maximum treshold for costs of selected nodes.\n",
@@ -428,8 +470,10 @@
         "    const_normal(bool): If this arg equals to true, the marginal gain will normalize with cost of each node.\n",
         "    node_costs(dict): The dictionary that specify the selection cost for each node.\n",
         "\n",
+        "\n",
         "  Returns:\n",
-        "    list: The top nodes with maximum influence\n",
+        "    list: The top nodes with maximum influence.\n",
+        "    int: The benefit of the top nodes.\n",
         "  \"\"\"\n",
         "  \n",
         "  top_nodes = list()\n",
@@ -449,6 +493,7 @@
         "      if cost_normal:\n",
         "        initial_benefit /= node_costs[node]\n",
         "\n",
+        "      # Sorted list with marginal benefit (-benefit, (node, time))\n",
         "      heapq.heappush(marginal_benefit_heap, (-initial_benefit, (node, 0)))\n",
         "\n",
         "\n",
@@ -462,7 +507,9 @@
         "    node_bebefit = -negative_node_benefit\n",
         "\n",
         "    if node not in top_nodes and node_costs[node] <= remain_budget:\n",
+        "      # if node in slected list or the budget isn' tenough for selected i, remove it\n",
         "      if node_time == current_time:\n",
+        "        # Marginal benefit is updated and the best\n",
         "        top_nodes.append(node)\n",
         "        remain_budget -= node_costs[node]\n",
         "        print(f\"Top Nodes = {top_nodes}, Remain Budget = {remain_budget}\")\n",
@@ -471,14 +518,14 @@
         "          break\n",
         "\n",
         "      else:\n",
-        "\n",
+        "        # Recalculate benefit of the node\n",
         "        initial_nodes = deepcopy(top_nodes)\n",
         "        initial_nodes.append(node)\n",
         "\n",
         "        marginal_benefit = benefit_function(graph=graph,\n",
-        "                                                  initial_nodes=initial_nodes,\n",
-        "                                                  probability=probability,\n",
-        "                                                  number_realization=number_realization)\n",
+        "                                            initial_nodes=initial_nodes,\n",
+        "                                            probability=probability,\n",
+        "                                            number_realization=number_realization)\n",
         "\n",
         "        if cost_normal:\n",
         "          marginal_benefit /= node_costs[node]\n",
@@ -512,6 +559,8 @@
         "        number_realization=1):\n",
         "\n",
         "  \"\"\"\n",
+        "  CELF algoithm. This algorithm run two times Lazy Hill Climbing; With cost normalization and without it.\n",
+        "\n",
         "  Args:\n",
         "    graph(Graph): The graph\n",
         "    budget(float): The maximum treshold for costs of selected nodes.\n",
@@ -521,7 +570,8 @@
         "    node_costs(dict): The dictionary that specify the selection cost for each node.\n",
         "\n",
         "  Returns:\n",
-        "    list: The top nodes with maximum influence\n",
+        "    list: The top nodes with maximum influence.\n",
+        "    int: The benefit of the top nodes.\n",
         "  \"\"\"\n",
         "\n",
         "  print(\"Ignore Cost Hill Climbing:\")\n",
@@ -542,7 +592,7 @@
       "metadata": {
         "id": "gcqWOCMyfcWK"
       },
-      "execution_count": 23,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -575,7 +625,7 @@
         "id": "dj3TzE949xxC",
         "outputId": "a489398b-328f-4f8a-c235-2c589d959619"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -612,7 +662,7 @@
         "id": "IHbKM-re8JmX",
         "outputId": "f2b23590-fa2b-4232-a60b-b7bb83c1dc74"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -661,7 +711,7 @@
         "id": "6vmncnrA9m0N",
         "outputId": "31f1d2be-3fb8-4ae5-ba42-6ed46dfac050"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -740,7 +790,7 @@
         "id": "refuT5qnBRdr",
         "outputId": "fbe9adfa-0fd7-4e8e-f4bb-139914aa6c78"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -777,7 +827,7 @@
         "id": "kTMzGU2atmDr",
         "outputId": "db6f9627-a341-4ca0-ac77-51989dca66ed"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -818,46 +868,37 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "svVqA6H74sMg",
-        "outputId": "a6618760-3af5-46c4-9aa5-3621f239654e"
+        "outputId": "9d49b6e2-7493-4587-d008-26820b0dcc5a"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Ignore Cost Hill Climbing:\n",
-            "Top Nodes = [35], Remain Budget = 6.0\n",
-            "Top Nodes = [35, 1102], Remain Budget = 1.1999999999999993\n",
-            "Top Nodes = [35, 1102, 2255], Remain Budget = 0.39999999999999925\n",
+            "Top Nodes = [16], Remain Budget = 8.4\n",
+            "Top Nodes = [16, 120], Remain Budget = 5.2\n",
+            "Top Nodes = [16, 120, 746], Remain Budget = 0.39999999999999947\n",
             "Normal Cose Hill Climbing:\n",
-            "Top Nodes = [179], Remain Budget = 9.2\n",
-            "Top Nodes = [179, 3138], Remain Budget = 8.399999999999999\n",
-            "Top Nodes = [179, 3138, 3639], Remain Budget = 7.599999999999999\n",
-            "Top Nodes = [179, 3138, 3639, 4035], Remain Budget = 6.799999999999999\n",
-            "Top Nodes = [179, 3138, 3639, 4035, 5414], Remain Budget = 5.999999999999999\n",
-            "Top Nodes = [179, 3138, 3639, 4035, 5414, 11039], Remain Budget = 5.199999999999999\n",
-            "Top Nodes = [179, 3138, 3639, 4035, 5414, 11039, 11153], Remain Budget = 4.3999999999999995\n",
-            "Top Nodes = [179, 3138, 3639, 4035, 5414, 11039, 11153, 15353], Remain Budget = 3.5999999999999996\n",
-            "Top Nodes = [179, 3138, 3639, 4035, 5414, 11039, 11153, 15353, 21370], Remain Budget = 2.8\n",
-            "Top Nodes = [179, 3138, 3639, 4035, 5414, 11039, 11153, 15353, 21370, 21383], Remain Budget = 1.9999999999999998\n",
-            "Top Nodes = [179, 3138, 3639, 4035, 5414, 11039, 11153, 15353, 21370, 21383, 23627], Remain Budget = 1.1999999999999997\n",
-            "Top Nodes = [179, 3138, 3639, 4035, 5414, 11039, 11153, 15353, 21370, 21383, 23627, 26086], Remain Budget = 0.3999999999999997\n",
-            "Time = 141.27310872077942 seconds\n",
-            "Nodes = [35, 1102, 2255]\n",
-            "Benefit = 4690.25\n"
+            "Top Nodes = [231], Remain Budget = 9.2\n",
+            "Top Nodes = [231, 624], Remain Budget = 8.399999999999999\n",
+            "Top Nodes = [231, 624, 3678], Remain Budget = 7.599999999999999\n",
+            "Top Nodes = [231, 624, 3678, 9504], Remain Budget = 6.799999999999999\n",
+            "Top Nodes = [231, 624, 3678, 9504, 10117], Remain Budget = 5.999999999999999\n",
+            "Top Nodes = [231, 624, 3678, 9504, 10117, 21884], Remain Budget = 5.199999999999999\n",
+            "Top Nodes = [231, 624, 3678, 9504, 10117, 21884, 25508], Remain Budget = 4.3999999999999995\n",
+            "Top Nodes = [231, 624, 3678, 9504, 10117, 21884, 25508, 25623], Remain Budget = 3.5999999999999996\n",
+            "Top Nodes = [231, 624, 3678, 9504, 10117, 21884, 25508, 25623, 26169], Remain Budget = 2.8\n",
+            "Top Nodes = [231, 624, 3678, 9504, 10117, 21884, 25508, 25623, 26169, 27638], Remain Budget = 1.9999999999999998\n",
+            "Top Nodes = [231, 624, 3678, 9504, 10117, 21884, 25508, 25623, 26169, 27638, 36150], Remain Budget = 1.1999999999999997\n",
+            "Top Nodes = [231, 624, 3678, 9504, 10117, 21884, 25508, 25623, 26169, 27638, 36150, 36753], Remain Budget = 0.3999999999999997\n",
+            "Time = 133.3249442577362 seconds\n",
+            "Nodes = [16, 120, 746]\n",
+            "Benefit = 4690.5\n"
           ]
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "xXen3ChWDc_V"
-      },
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
